src/css/_custom.scss
/* These inject tags are used for dynamically creating imports for themelet styles, you can place them where ever you like in this file. */

/* inject:imports */
/* endinject */

/* This file allows you to override default styles in one central location for easier upgrade and maintenance. */

/* Common Site Variables */
$theme-tan: #DAB485;
$theme-bg-blue: rgba(19,30,38,0.85);
$theme-bg-dark: #131e26;
$theme-bg-light-1: #eaeaea;
$theme-bg-light-2: #f6f6f6;
$theme-bg-dropdown: #313a41;
$p-text-color: #777777;
$theme-title-text: #000;

/* Entire Page Styles */
@font-face {
	font-family: 'gotham_boldregular';
	src: url('fonts/Gotham Bold Regular.ttf') format('truetype');
}
@font-face {
	font-family: 'gotham_lightregular';
	src: url('fonts/Gotham Light Regular.otf') format('truetype');
}

@font-face {
	font-family: 'gotham_bookregular';
	src: url('fonts/Gotham Book Regular.otf') format('truetype');
}	

html {
	font-family: "gotham_lightregular", sans-serif;	
}

::selection{
	background: $theme-tan;
	color: #fff;
}

body {
	margin: 0;
}

header, 
footer, 
main, 
menu, 
nav, 
section, 
.block {
	display: block;
}

a {
	background-color: transparent;
}

a:active,
a:hover {
	outline: 0;
	text-decoration: none;
}

div, 
nav, 
ul {
}

p {
	position: relative;
}

li {
	list-style: none; /*background-color: yellow; /*debug*/ 
}

.text-center {
	align-text: center;
}

#wrapper {
	top: 0;
	margin: 0;
	margin-top: -28px;
}

/* End Entire Page Styles */



/* Styles for Header */

#header {
	font-family:"gotham_boldregular"; /* need to add fonts to 
	html */
	z-index: 99;
	padding-top: 25px;
	position: fixed;
	height: 90px;
	left: 0;
	right: 0;
	background-color: $theme-bg-blue; /* Will be transparent and not transparent upon scroll later */
	
	a {
		color: #fff;
	}

	a:hover {
		color: $theme-tan;
	}
}

#company-branding {
	display: inline-block;
}

#header .site-name a {
	color: #fff;
	font-size: 1.333em;
	text-transform: uppercase;
}

#header .block-menu {
	float: right;
	display: inline-block;
	width: auto;
}


@media (min-width: 992px) {
	#header #nav-menu-top {
		display:inline-block;
		padding-top: 10px;
		width: auto;
	}

	#header div.region-header > .header-nav {
		display:inline-block;
		width: auto;
		float: right;
	}

	#header .region-header {
		margin: auto;
		width: auto;
	}

	#nav-menu-top > ul.menu {
		margin: 0;
		position: relative;
	}

	#nav-menu-top > ul.menu > li.menu-item--active-trail a {
		color: $theme-tan;
	}

	#nav-menu-top > ul.menu > li.menu-item--active-trail a:before {
		width: 100%;
	}

	#nav-menu-top > ul.menu > li {
		list-style:none;
		float:left;
		margin: 0 13px;
		position: relative;
	}

	#nav-menu-top > ul.menu > li a {
		position: relative;
	}

	#nav-menu-top > ul.menu > li a:before {
		background-color: $theme-tan;
		bottom: 0;
		content: "";
		height: 4px;
		left: 50%;
		margin: 0 auto;
		position: absolute;
		top: auto;
		transform: translate(-50%,-50px);
		transition: width 0.3s ease 0s;
		width: 0;
	}
	

	#nav-menu-top > ul.menu li.menu-item--expanded ul { 
		display: none;
	}

	#nav-menu-top > ul.menu li.menu-item--expanded:hover ul {
		display: block;
		background-color: $theme-bg-dropdown;
		float: left;
		padding: 0;
		padding: 0 15px 10px 15px;
		width: 150px;

		li {
			padding-top: 0.8em;
			float: left;
			display: block;
			font-size: 0.8em
		}
	}

	#login {
		padding-top: 10px;
		margin-left: 15px;
	}

	#login .menu-item-child {
		display: inline-block;
	}

	#content {
		padding: 15px;
		color: $p-text-color;

		h1,
		h2 {
			color: $theme-title-text
			font-family: "gotham_bookregular";
		}

		h3,
		h4, {
			color: $theme-title-text;
			font-family: "gotham_lightregular";
		}
		
		p {
			color: $p-text-color;
			font-family: "gotham_bookregular";
		}
	}

	.row {
		padding-top: 1em;
		padding-bottom: 1em;
	}

	.theme-container {
		margin-left: 25%;
		margin-right: 25%;
	}

	.grid-left {
		text-align: right;
	}

	.grid-right {
		text-align: left;
	}

	.vertLine::before {
	    content: "";
	    background: $theme-tan;
	    width: 1px;
	    height: 200px;
	    position: absolute;
	    bottom: -60%;
	    left: 50%;
	}

	.horizLine::after {
		content: "";
	    background: $theme-tan;
	    width: 200px;
	    height: 1px;
	    position: absolute;
	    bottom: 0;
	    left: 50%;
	    margin-left: -100px;
	}
}

/* End Styles for Header */

.jumbotron-picture {
	background-color: transparent;
	background-image: url("images/mountains2.jpg");
	background-repeat: no-repeat;
	background-position: 0px -600px;
	background-size: cover;
	top: 0;
	height: 700px;
	margin-left: -28px;
	margin-right: -28px;
}

.background-box { /* This creates space for the jumbotron picture to be displayed */
	height: 700px;
	z-index: 0;
	width: 100%;
	background-color: $theme-bg-blue; /* overlay over image */
}

